Make some big refactors and add more overloads